# fastapi-starter

./: .gitignore  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: a938ee7bc181_.py
src/app/: main.py
src/app/core/: config.py  exceptions.py
src/app/db/: models.py  session.py
